# uncc-corvid

./: .clang-format  .gitignore  QueryDocuments.md  README.md  rl8_uncc.def  simple_cosim.sh  uncc_singularity.def
containers/apptainer/: base-cosim.def  cosim-toolchain.def  rl8-cosim.def
corvid/10-1-example/: .gitignore  CMakeLists.txt  IEEE_8500node_1.glm  IEEE_8500node_1.json  IEEE_8500node_10.glm  IEEE_8500node_10.json  IEEE_8500node_2.glm  IEEE_8500node_2.json  IEEE_8500node_3.glm  IEEE_8500node_3.json  IEEE_8500node_4.glm  IEEE_8500node_4.json  IEEE_8500node_5.glm  IEEE_8500node_5.json  IEEE_8500node_6.glm  IEEE_8500node_6.json  IEEE_8500node_7.glm  IEEE_8500node_7.json  IEEE_8500node_8.glm  IEEE_8500node_8.json  IEEE_8500node_9.glm  IEEE_8500node_9.json  README.md  pf_app.cpp  powerflow_ex.cpp
corvid/10-1-example/validate/: CMakeLists.txt  pf_app.cpp  pf_app.hpp  powerflow_ex.cpp
corvid/custom-example/: AllPaths.txt  build.sh  clean_dir.sh  full-build.sh  gridlabd.xml  gridpack-gridlabd-cosim.json  rebuild.sh  runnable-cosim.json
corvid/custom-example/gridlabd/: baseline-gpk.glm  gpk-gld-right-fed.json  oneline-right-w-gpk-1.glm  oneline-right-w-gpk-2.glm  oneline-right-w-gpk.glm
corvid/custom-example/gridpack/: CMakeLists.txt  GpkRunner.cpp  GpkRunner.hpp  gpk-left-fed-1.json  gpk-left-fed.cpp  gridpack_left_federate_1.json  input.xml  pf_app.cpp  pf_app.hpp  pf_factory.cpp  pf_factory.hpp
corvid/scalability/: CMakeLists.txt  README.md  build.sh  dependencies.cmake  input.json  output.txt  rebuild.sh  run.sh  runnable_cosim.json
corvid/scalability/corvid_helics_lib/: CMakeLists.txt
corvid/scalability/corvid_helics_lib/utils/: CMakeLists.txt  JsonTemplates.hpp
corvid/scalability/gridlabd/: CMakeLists.txt
corvid/scalability/gridlabd/json/: IEEE_8500node.json
corvid/scalability/gridpack/: CMakeLists.txt
corvid/scalability/gridpack/IEEE-118/: CMakeLists.txt  helics_setup.json  pf_app.cpp  pf_app.hpp  pf_factory.cpp  pf_factory.hpp  pf_input.cpp  pf_input.hpp  pf_state.cpp  powerflow_ex.cpp  three_phase_pf_app.hpp
corvid/scalability/orchestrator/: CMakeLists.txt  main.cpp  manifest.hpp  model.cpp  model.hpp  orchestrator.cpp  orchestrator.hpp
corvid/scalability/orchestrator/documentation/: design.md
examples/2bus-13bus/: CMakeLists.txt
examples/IEEE-118-8500/118_gridpack_alone/: pf_app.cpp  powerflow_ex.cpp
examples/IEEE-118-8500/cosim_118_8500/: CMakeLists.txt  IEEE_8500node.glm  ieee8500_gpk_cosim_runner.json  powerflow_ex.cpp
examples/glds_10_118_1_bus/: CMakeLists.txt  IEEE_8500node_1.glm  IEEE_8500node_10.glm  IEEE_8500node_2.glm  IEEE_8500node_3.glm  IEEE_8500node_4.glm  IEEE_8500node_5.glm  IEEE_8500node_6.glm  IEEE_8500node_7.glm  IEEE_8500node_8.glm  IEEE_8500node_9.glm  ieee8500_10_gpk_1_cosim_runner.json  pf_app.cpp  powerflow_ex.cpp
examples/lc-tank/cpp/: CMakeLists.txt
examples/pf-cosim/gpk/: CMakeLists.txt
examples/simple-cosim/: gridpack_federate
multi_stage_build/: build.sh  build_manual.sh  rl8_uncc_sys.def  rl8_uncc_sys_helics.def  rl8_uncc_sys_helics_gridlab.def  rl8_uncc_sys_helics_gridlab_gridpack.def  rl8_uncc_sys_helics_gridpack.def  rl8_uncc_sys_helics_gridpack_gridlab.def
scalability/: CMakeLists.txt  build.sh  clean_dir.sh  export.sh  ieee8500_gpk_cosim_runner.json  orchestrator.py  rebuild.sh  runnable_cosim.json  testing.cmake  tracer_config.json
scalability/corvid_helics_lib/: CMakeLists.txt
scalability/corvid_helics_lib/data_federates/: CMakeLists.txt  custom-server.py  custom-tracer.py  custom_tracer.py  query-federate.cpp  query-federate.py  query_config.json  query_federate_input.cpp  query_federate_input.hpp  testing-websocket-server.cpp  tracer_config.json  websocket-client.cpp  websocket-server.cpp
scalability/corvid_helics_lib/testing/: CMakeLists.txt  testing_websocket_client.cpp  testing_websocket_server.cpp
scalability/corvid_helics_lib/utils/: CMakeLists.txt  JsonTemplates.hpp  dummy_client.cpp  json_templates.hpp  local_log_helper.hpp  persistent-websocket-client.cpp  persistent-websocket-client.hpp  stopwatch.hpp  synchronous_websocket_client.cpp  synchronous_websocket_client.hpp  testing-websocket-server.cpp  websocket-client-manager.hpp  websocket_client.cpp  websocket_client.hpp
scalability/gridlabd/: CMakeLists.txt
scalability/gridlabd/json/: CMakeLists.txt  IEEE_8500node.json
scalability/gridpack/: CMakeLists.txt
scalability/gridpack/IEEE-118/: CMakeLists.txt  helics_fed_info_config.json  helics_setup.json  ieee_118_app.cpp  ieee_118_app.hpp  main.cpp  pf_app.cpp  pf_app.hpp  pf_factory.cpp  pf_factory.hpp  pf_input.cpp  pf_input.hpp  pf_state.cpp  pf_state.hpp  powerflow_ex.cpp  three_phase_pf_app.cpp  three_phase_pf_app.hpp
scalability/gridpack/powerflow/: CMakeLists.txt  factory.cpp  factory.hpp  input.cpp  input.hpp  state.cpp  state.hpp  tools.cpp  tools.hpp
scripts/: 2bus_13bus.sh  IEEE-118-8500_x_10.sh  lc_tank.sh  pf_cosim.sh  simple_cosim.sh
src/: CMakeLists.txt  CMakePresets.json
src/cmake_deps/: dependencies.cmake  lib_names.cmake  testing.cmake
src/common/: CMakeLists.txt
src/common/gridpack/: CMakeLists.txt
src/common/helics/: CMakeLists.txt  input.cpp
src/common/helics/tests/: CMakeLists.txt  input_tests.cpp  tools_tests.cpp
src/common/utils/: CMakeLists.txt  json_templates.hpp  local_log_helper.cpp  local_log_helper.hpp  stopwatch.hpp  websocket_client.cpp
src/common/utils/tests/: CMakeLists.txt  json_templates_tests.cpp  local_log_helper_tests.cpp  mock_websocket_server.hpp  stopwatch_tests.cpp  websocket_client_tests.cpp
src/debug_tools/: CMakeLists.txt
src/federates/: CMakeLists.txt
src/federates/gridlabd/: CMakeLists.txt
src/federates/gridlabd/IEEE-8500/: CMakeLists.txt  IEEE_8500node.glm  baseline_IEEE_8500.glm
src/federates/gridpack/IEEE-118/: CMakeLists.txt  main.cpp
src/federates/helics/: CMakeLists.txt
src/federates/helics/queryable/: CMakeLists.txt  main.cpp  query_federate.cpp  query_federate.hpp  query_federate_input.cpp
src/scripts/: build.sh  clean_dir.sh  export.sh
(+4 files in other folders)
